# freshdesk-mcp

./: .cursorignore  .env.example  .gitignore  AGENTS.md  AUTOMATIONS.md  CLAUDE.md  CONTRIBUTORS.md  README.md  pyproject.toml
examples/: claude-desktop.mac-linux.json  claude-desktop.windows.json
scripts/: run_freshdesk_mcp.cmd  run_freshdesk_mcp.ps1
src/freshdesk_mcp/: client.py  config.py  server.py
tests/: test_config.py  test_server.py
