[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freshdesk-mcp"
version = "0.1.0"
description = "Freshdesk MCP server that reads credentials from environment variables."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.9.0",
]

[project.scripts]
freshdesk-mcp = "freshdesk_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/freshdesk_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
